--- a/style.css
+++ b/style.css
@@ -23,6 +23,12 @@ body {
     margin: 0 5px;
 }
 
+.container-title {
+    position: absolute;
+    left: 40px;
+    margin-top: 5px;
+}
+
 .mainMenu {
     font-size: 10px;
 }
@@ -58,15 +64,21 @@ body {
 }
 
 .main {
-    font-size: 28px; /* Increased text to enable scrolling */
+    font-size: 28px;
     position: fixed;
-    bottom: 0;
+    top: 0;
     right: 0;
+    margin-top: 50px;
     color: #fff;
     overflow-y: auto;
-    height: 208px;
-    width: 280px;
+    height: 87%;
+    width: 86%;
     overflow-x: hidden;
+    margin-left: 20px;
+}
+
+.sub {
+    margin-left: 20px;
 }
 
 label {
@@ -119,8 +131,10 @@ input[type=text] {
     margin-bottom: 10px;
 }
 
-input[type=checkbox] {
-    display: inline-block;
+.container-title input[type=checkbox] {
+    position: absolute;
+    left: -20px;
+    top: -3px;
 }
 
 .hide {
@@ -133,7 +147,7 @@ input[type=text]:focus {outline:0;}
     background-color: rgba(0, 0, 0, 0);
     border: none;
     color: white;
-    padding: 4px 20px;
+    padding: 4px 0;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -141,7 +155,8 @@ input[type=text]:focus {outline:0;}
     cursor: default;
     border-radius: 20px;
     margin-top: 0;
-    border: 2px solid #353535 !important; 
+    border: 2px solid #a7a7a7 !important; 
+    width: 80px;
 }
 
 .buttonDiv {
@@ -162,12 +177,12 @@ input[type=text]:focus {outline:0;}
 }
 
 .button:focus {outline:0;}
-
+/* 
 .generateButton {
     background-color: #052AFF;
     height: 40px;
-    width: 240px;
-    position: fixed;
+    width: 43%;
+    position: absolute;
     z-index: 2;
     bottom: 0;
     left: 60px;
@@ -177,14 +192,48 @@ input[type=text]:focus {outline:0;}
     text-decoration: none;
     font-size: 12px;
     color: #fff;
+} */
+table { width: 70%; }
+table, th, td { border: solid 1px #DDD;
+    border-collapse: collapse; padding: 2px 3px; text-align: center;
 }
 
-.generateButton:hover {
+.tableFixHead          { overflow-y: auto; height: 130px; }
+.tableFixHead thead th { position: sticky; top: 0; }
+
+/* Just common table stuff. Really. */
+table  { border-collapse: collapse; width: 92%; }
+th, td { padding: 8px 16px; text-align: center; border: solid 1px #DDD;}
+th     { background:rgb(56, 56, 56); border: solid 1px #DDD;}
+
+.lowerButtonContainer {
+    display: flex;
+    width: 100%;
+    /* height: 40px; */
+    font-size: 12px;
+    text-align: center;
+    /* background-color: #052AFF; */
+    margin-top: 9px;
+    line-height: 40px;
+    /* position: absolute; */
+    margin-left: -10px;
+}
+
+.lowerButtonContainer > div {
+    flex: 1; /*grow*/
+    border-right: 1px solid #c2c2c2;
+}
+
+.lowerButtonContainer > div:last-child {
+    border:none;
+}
+
+.lowerButton:hover {
     background-color: #31f8ff;
     color: #000;
 }
 
-.generateButton:active {
+.lowerButton:active {
     background-color: #fff;
     color: #000;
 }
@@ -239,10 +288,17 @@ input[type=text]:focus {outline:0;}
     left: 70px;
 }
 
+.sideNavItem {
+    cursor: default;
+    left: 17px;
+}
+
+#menuGoal {
+    bottom: 80px;
+}
+
 #menuSettings {
     bottom: 30px;
-    left: 17px;
-    cursor: default;
 }
 
 #menuOverlay {
@@ -313,8 +369,8 @@ img {
 
 .centered {
     position: fixed; /* or absolute */
-    top: 110px;
-    left: 50px;
+    top: 150px;
+    left: 90px;
 }
 
 .slider {
