--- a/app/css/style.css
+++ b/app/css/style.css
@@ -18,8 +18,9 @@ body {
     margin-left: -5px;
 }
 
-.container > div {
-    flex: 1; /*grow*/
+.container>div {
+    flex: 1;
+    /*grow*/
     margin: 0 5px;
 }
 
@@ -109,7 +110,7 @@ h4 {
     margin-bottom: 20px;
 }
 
-hr { 
+hr {
     display: block;
     margin-top: 10px;
     margin-bottom: 0.5em;
@@ -118,7 +119,7 @@ hr {
     border-style: inset;
     border-width: 1px;
     opacity: 0.3;
-} 
+}
 
 input[type=text] {
     width: 130px;
@@ -139,9 +140,11 @@ input[type=text] {
 
 .hide {
     display: none;
-}	
+}
 
-input[type=text]:focus {outline:0;}
+input[type=text]:focus {
+    outline: 0;
+}
 
 .button {
     background-color: rgba(0, 0, 0, 0);
@@ -155,7 +158,7 @@ input[type=text]:focus {outline:0;}
     cursor: default;
     border-radius: 20px;
     margin-top: 0;
-    border: 2px solid #a7a7a7 !important; 
+    border: 2px solid #a7a7a7 !important;
     width: 80px;
 }
 
@@ -171,7 +174,7 @@ input[type=text]:focus {outline:0;}
     cursor: default;
     border-radius: 20px;
     margin-top: 0;
-    border: 2px solid #a7a7a7 !important; 
+    border: 2px solid #a7a7a7 !important;
     width: 80px;
 }
 
@@ -183,16 +186,19 @@ input[type=text]:focus {outline:0;}
 .button:hover {
     background-color: #FF5252;
     color: #000;
-    border: 2px solid #FF5252 !important; 
+    border: 2px solid #FF5252 !important;
 }
 
 .button:active {
     background-color: #fff;
     color: #000;
-    border: 2px solid #fff !important; 
+    border: 2px solid #fff !important;
 }
 
-.button:focus {outline:0;}
+.button:focus {
+    outline: 0;
+}
+
 /* 
 .generateButton {
     background-color: #052AFF;
@@ -209,18 +215,45 @@ input[type=text]:focus {outline:0;}
     font-size: 12px;
     color: #fff;
 } */
-table { width: 70%; }
-table, th, td { border: solid 1px #DDD;
-    border-collapse: collapse; padding: 2px 3px; text-align: center;
+
+table {
+    width: 70%;
 }
 
-.tableFixHead          { overflow-y: auto; height: 130px; }
-.tableFixHead thead th { position: sticky; top: 0; }
+table, th, td {
+    border: solid 1px #DDD;
+    border-collapse: collapse;
+    padding: 2px 3px;
+    text-align: center;
+}
+
+.tableFixHead {
+    overflow-y: auto;
+    height: 130px;
+}
+
+.tableFixHead thead th {
+    position: sticky;
+    top: 0;
+}
 
 /* Just common table stuff. Really. */
-table  { border-collapse: collapse; width: 92%; }
-th, td { padding: 8px 16px; text-align: center; border: solid 1px #DDD;}
-th     { background:rgb(56, 56, 56); border: solid 1px #DDD;}
+
+table {
+    border-collapse: collapse;
+    width: 92%;
+}
+
+th, td {
+    padding: 8px 16px;
+    text-align: center;
+    border: solid 1px #DDD;
+}
+
+th {
+    background: rgb(56, 56, 56);
+    border: solid 1px #DDD;
+}
 
 .lowerButtonContainer {
     display: flex;
@@ -235,13 +268,14 @@ th     { background:rgb(56, 56, 56); border: solid 1px #DDD;}
     margin-left: -10px;
 }
 
-.lowerButtonContainer > div {
-    flex: 1; /*grow*/
+.lowerButtonContainer>div {
+    flex: 1;
+    /*grow*/
     border-right: 1px solid #c2c2c2;
 }
 
-.lowerButtonContainer > div:last-child {
-    border:none;
+.lowerButtonContainer>div:last-child {
+    border: none;
 }
 
 .lowerButton:hover {
@@ -255,8 +289,12 @@ th     { background:rgb(56, 56, 56); border: solid 1px #DDD;}
 }
 
 @media screen and (max-height: 450px) {
-    .sidenav {padding-top: 15px;}
-    .sidenav a {font-size: 18px;}
+    .sidenav {
+        padding-top: 15px;
+    }
+    .sidenav a {
+        font-size: 18px;
+    }
 }
 
 #loading {
@@ -275,13 +313,13 @@ th     { background:rgb(56, 56, 56); border: solid 1px #DDD;}
     opacity: 0.3;
 }
 
-#closebtn:hover{
+#closebtn:hover {
     -webkit-filter: opacity(1) drop-shadow(0 0 0 #fff);
     filter: opacity(1) drop-shadow(0 0 0 #fff);
     opacity: 0.5;
 }
 
-#backbtn:hover{
+#backbtn:hover {
     -webkit-filter: opacity(1) drop-shadow(0 0 0 #fff);
     filter: opacity(1) drop-shadow(0 0 0 #fff);
     opacity: 0.5;
@@ -338,7 +376,7 @@ a {
 }
 
 .active {
-    border: 3px solid #FF5252 !important; 
+    border: 3px solid #FF5252 !important;
 }
 
 .userIcon {
@@ -391,7 +429,8 @@ img {
 }
 
 .centered {
-    position: fixed; /* or absolute */
+    position: fixed;
+    /* or absolute */
     top: 150px;
     left: 90px;
 }
@@ -405,21 +444,25 @@ img {
 }
 
 /* width */
+
 ::-webkit-scrollbar {
     width: 5px;
 }
-  
+
 /* Track */
+
 ::-webkit-scrollbar-track {
-    background: #aaaaaa; 
+    background: #aaaaaa;
 }
 
 /* Handle */
+
 ::-webkit-scrollbar-thumb {
-    background: rgb(68, 68, 68); 
+    background: rgb(68, 68, 68);
 }
 
 /* Handle on hover */
+
 ::-webkit-scrollbar-thumb:hover {
-    background: #555; 
+    background: #555;
 }
