Continue with rewrite
Needs:
CSS, Modules, and a rewrite of overlays.

Broken:
Scrolling, preload.js

Working:
io? (untested), new variable layout, modules, default modules, store.

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,6 +1,17 @@
 html {
     color: whitesmoke;
     background-color: rgb(20, 20, 20);
+    -webkit-app-region: drag;
+    height: 100%;
+    width: 100%;
+}
+
+input {
+    -webkit-app-region: no-drag;
+}
+
+button {
+    -webkit-app-region: no-drag;
 }
 
 .hide {
@@ -11,16 +22,20 @@ html {
 
 ::-webkit-scrollbar {
     width: 5px;
+    -webkit-app-region: no-drag;
 }
 
 ::-webkit-scrollbar-track {
     background: #aaaaaa;
+    -webkit-app-region: no-drag;
 }
 
 ::-webkit-scrollbar-thumb {
     background: rgb(68, 68, 68);
+    -webkit-app-region: no-drag;
 }
 
 ::-webkit-scrollbar-thumb:hover {
     background: #555;
+    -webkit-app-region: no-drag;
 }
