Implement chat direction, add donation and follower goal, some fixes for duplicate modules, and some minor tweaks here and there

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -196,6 +196,7 @@ input[type=number] {
 .user-icon {
     position: absolute;
     border-radius: 50%;
+    object-fit: cover;
     padding: 5px;
     top: 0px;
 }
