--- a/app/css/style.css
+++ b/app/css/style.css
@@ -45,10 +45,6 @@ ion-icon {
 
 /* Inputs */
 
-input[type=range] {
-    -webkit-appearance: none;
-}
-
 ::-webkit-slider-runnable-track {
     width: 300px;
     height: 2px;
@@ -72,14 +68,11 @@ input:focus {
     outline: none;
 }
 
-input[type=color] {
-    background-color: white;
-    border-radius: 6px;
-    border: 1px solid #DCDCDC;
-    cursor: pointer;
+input[type=range] {
+    -webkit-appearance: none;
 }
 
-select {
+input {
     background-color: white;
     border-radius: 6px;
     border: 1px solid #DCDCDC;
@@ -93,8 +86,9 @@ input[type=number] {
     border: 1px solid #DCDCDC;
     cursor: pointer;
     font-size: 15px;
-    width: 100px;
+    width: 65px;
     cursor: auto;
+    outline: none;
 }
 
 .file-button {
