Make dropdowns properly searchable

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -82,6 +82,10 @@ input {
     outline: none;
 }
 
+input[type=select] {
+    height: 3em;
+}
+
 input[type=number] {
     background-color: white;
     border-radius: 6px;
