--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,5 +1,13 @@
 /* Misc */
 
+:root {
+    --menu-width: 200px;
+    --menu-user-height: 55px;
+    --menu-icon-color: #DCDCDC;
+    --menu-icon-color-hover: #7a7a7a;
+    --menu-background-color: #202020;
+}
+
 html {
     color: whitesmoke;
     background-color: #141414;
@@ -17,10 +25,11 @@ a {
 }
 
 ion-icon {
-    pointer-events: none;
-    stroke: white;
-    color: white;
-    fill: white;
+    pointer-events: none !important;
+    stroke: white !important;
+    color: white !important;
+    fill: white !important;
+    transition: 0.2s linear;
 }
 
 .box {
@@ -181,6 +190,17 @@ input[type=number] {
     right: 0px;
 }
 
+#content {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
+    overflow-x: hidden;
+    display: table-row;
+    opacity: 0;
+    margin-top: 30px;
+}
+
 /* Title bar */
 
 .title-bar {
@@ -190,14 +210,39 @@ input[type=number] {
     height: 30px;
     margin-top: 0px;
     -webkit-app-region: drag;
-    background-color: #141414;
+    background-color: #272727;
     padding-top: 5px;
-    z-index: 999;
+}
+
+.title-bar ion-icon {
+    color: white !important;
+}
+
+.title-bar-title {
+    position: absolute;
+    left: 30px;
+    top: 2px;
+    text-align: left;
+    width: 100%;
+    color: rgb(133, 133, 133);
+    user-select: none;
+}
+
+.title-bar-title img {
+    width: 20px;
+    position: absolute;
+    top: 2px;
+    left: -25px;
+    -webkit-app-region: no-drag;
 }
 
 .currentpage {
     position: absolute;
-    left: 70px;
+    top: 2px;
+    text-align: center;
+    width: 100%;
+    color: rgb(189, 189, 189);
+    user-select: none;
 }
 
 .close {
@@ -206,47 +251,129 @@ input[type=number] {
     -webkit-app-region: no-drag;
 }
 
+.close:hover ion-icon { 
+    color: var(--menu-icon-color-hover) !important;
+}
+
+.minmax {
+    position: absolute;
+    right: 40px;
+    -webkit-app-region: no-drag;
+}
+
+.minmax:hover ion-icon { 
+    color: var(--menu-icon-color-hover) !important;
+}
+
 .minimize {
     position: absolute;
-    right: 30px;
+    right: 70px;
     -webkit-app-region: no-drag;
+}
+
+.minimize:hover ion-icon { 
+    color: var(--menu-icon-color-hover) !important;
 }
 
 /* Menu */
 
 .menu {
-    position: absolute;
-    left: 0px;
-    top: 0px;
-    width: 70px;
+    /* display: table-cell; */
+    position: fixed;
+    top: 30px;
+    left: 0;
+    width: var(--menu-width);
     height: 100%;
-    z-index: 1000;
+    background-color: var(--menu-background-color);
 }
 
 .menu-list {
     position: absolute;
-    bottom: 0px;
-    font-size: 25px;
+    top: 0;
+    width: 100%;
 }
 
-#followers {
-    margin-top: 70px;
-    padding-left: 4px;
+.menu-button {
+    font-size: 18px;
+
+}
+
+.menu-button-title {
+    display: inline;
+    position: relative;
+    margin-top: -50px;
+
+}
+
+#menu-user {
+    position: fixed;
+    background-color: #1b1b1b;
+    height: var(--menu-user-height);
+    width: var(--menu-width);
+    bottom: 0;
+    border-top: 1px solid #646464;
 }
 
 .user-icon {
-    position: absolute;
     border-radius: 50%;
     object-fit: cover;
-    padding: 5px;
-    top: 0px;
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    top: 7px;
+    left: 5px;
 }
 
-.placeholder-icon {
+.user-username {
     position: absolute;
+    max-width: 105px;
+    white-space: nowrap;
+    overflow: hidden !important;
+    text-overflow: ellipsis;
+    left: 55px;
+    top: 10px;
+    box-sizing: border-box;
+    display: inline-block;
+    background-color: #DCDCDC;
+    color: #141414;
+    border-radius: 3rem;
+    text-align: center;
+    font-size: 12px;
+    font-weight: bold;
+    padding: .01rem .45rem .2rem;
+    line-height: inherit;
+}
+
+.user-followers {
+    font-size: 11px;
+    color: white;
+    position: absolute;
+    left: 56px;
+    top: 33px;
+}
+
+.user-settings {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    font-size: 25px !important;
+}
+
+.user-settings ion-icon {
+    color: var(--menu-icon-color) !important;
+}
+
+.user-settings:hover ion-icon {
+    color: var(--menu-icon-color-hover) !important;
+}
+
+.user-platform {
+    position: absolute;
+    width: 15px;
+    height: 15px;
     border-radius: 50%;
-    padding: 5px;
-    top: 0px;
+    left: 5px;
+    bottom: 5px;
 }
 
 .menu-label {
@@ -282,13 +409,10 @@ input[type=number] {
 /* Pages */
 
 .pages {
-    position: absolute;
-    padding-top: 40px;
-    left: 70px;
-    top: 0px;
+    padding: 20px 0 0 220px;
     height: 100%;
-    overflow: auto;
-    width: calc(100% - 75px);
+    overflow-y: auto;
+    overflow-x: hidden;
 }
 
 .page a:hover {
@@ -313,4 +437,37 @@ input[type=number] {
     line-height: 35px;
     width: 175px;
     display: inline-block;
+}
+
+/* Side menu */
+
+nav ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+
+nav ul li a {
+	display: block;
+	background-color: var(--menu-background-color);
+	padding: 10px 15px;
+    color: #dddddd !important;
+	text-decoration: none;
+    transition: 0.2s linear;
+    border-bottom: 1px solid #292929;
+}
+
+nav ul li a:hover {
+	background: #dbdbdb;
+	color: #dddddd !important;
+}
+
+nav ul li.active a {
+	background: #141414;
+	color: #dddddd !important;
+}
+
+nav ul li.active a:hover {
+	background: #141414;
+	color: #4b4b4b !important;
 }
