Menu, CSS, func. update (description)
- Dynamic widget generation with show/hide mute/unmute buttons
- Fixed content CSS (no more out of bounds)
- No more double-loading on navigate() (when navigating on already active page)
- Some CSS changes
- Added electron-context-menu

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -1,11 +1,11 @@
-/* Misc */
-
 :root {
     --menu-width: 200px;
-    --menu-user-height: 55px;
+    --user-bar-height: 55px;
     --menu-icon-color: #DCDCDC;
     --menu-icon-color-hover: #7a7a7a;
     --menu-background-color: #202020;
+    --menu-border-color: #383838;
+    --title-bar-height: 30px;
 }
 
 html {
@@ -43,11 +43,11 @@ ion-icon {
 }
 
 ::-webkit-scrollbar-track {
-    background: #AAAAAA;
+    background: #444444;
 }
 
 ::-webkit-scrollbar-thumb {
-    background: #444444;
+    background: #AAAAAA;
 }
 
 ::-webkit-scrollbar-thumb:hover {
@@ -75,8 +75,8 @@ ion-icon {
     cursor: pointer;
 }
 
-input:focus {
-    outline: none;
+*:focus {
+    outline: none !important;
 }
 
 input[type=range] {
@@ -84,11 +84,12 @@ input[type=range] {
 }
 
 input {
-    background-color: white;
+    background-color: var(--menu-background-color) !important;
+    color: var(--menu-icon-color) !important;
     border-radius: 6px;
     border: 1px solid #DCDCDC;
-    cursor: pointer;
-    outline: none;
+    cursor: auto;
+    outline: none !important;
 }
 
 input[type=search] {
@@ -101,7 +102,7 @@ select {
     border-radius: 6px;
     border: 1px solid #DCDCDC;
     cursor: pointer;
-    outline: none;
+    outline: none !important;
 }
 
 input[type=number] {
@@ -112,7 +113,7 @@ input[type=number] {
     font-size: 15px;
     width: 65px;
     cursor: auto;
-    outline: none;
+    outline: none !important;
 }
 
 .file-button {
@@ -198,7 +199,7 @@ input[type=number] {
     overflow-x: hidden;
     display: table-row;
     opacity: 0;
-    margin-top: 30px;
+    margin-top: var(--title-bar-height);
 }
 
 /* Title bar */
@@ -207,7 +208,7 @@ input[type=number] {
     position: absolute;
     top: 0px;
     width: 100%;
-    height: 30px;
+    height: var(--title-bar-height);
     margin-top: 0px;
     -webkit-app-region: drag;
     background-color: #272727;
@@ -280,17 +281,20 @@ input[type=number] {
 .menu {
     /* display: table-cell; */
     position: fixed;
-    top: 30px;
+    top: var(--title-bar-height);
     left: 0;
     width: var(--menu-width);
-    height: 100%;
+    height: calc(100% - var(--user-bar-height) - var(--title-bar-height));
     background-color: var(--menu-background-color);
+    overflow-y: auto !important;
 }
 
 .menu-list {
     position: absolute;
     top: 0;
     width: 100%;
+    overflow-y: auto !important;
+
 }
 
 .menu-button {
@@ -305,10 +309,10 @@ input[type=number] {
 
 }
 
-#menu-user {
+#user-bar {
     position: fixed;
     background-color: #1b1b1b;
-    height: var(--menu-user-height);
+    height: var(--user-bar-height);
     width: var(--menu-width);
     bottom: 0;
     border-top: 1px solid #646464;
@@ -326,7 +330,7 @@ input[type=number] {
 
 .user-username {
     position: absolute;
-    max-width: 105px;
+    max-width: calc(var(--menu-width) - 65px);
     white-space: nowrap;
     overflow: hidden !important;
     text-overflow: ellipsis;
@@ -342,6 +346,13 @@ input[type=number] {
     font-weight: bold;
     padding: .01rem .45rem .2rem;
     line-height: inherit;
+}
+
+.user-username ion-icon {
+    position: absolute;
+    color: #141414 !important;
+    font-size: 18px !important;
+    top: 1px;
 }
 
 .user-followers {
@@ -410,7 +421,7 @@ input[type=number] {
 
 .pages {
     padding: 20px 0 0 220px;
-    height: 100%;
+    height: calc(100% - var(--title-bar-height));
     overflow-y: auto;
     overflow-x: hidden;
 }
@@ -447,27 +458,25 @@ nav ul {
 	padding: 0;
 }
 
-nav ul li a {
-	display: block;
+nav ul li .menu-button {
+    border-radius: 0 !important;
 	background-color: var(--menu-background-color);
 	padding: 10px 15px;
-    color: #dddddd !important;
-	text-decoration: none;
+    border-bottom: 1px solid #383838;
     transition: 0.2s linear;
-    border-bottom: 1px solid #292929;
 }
 
-nav ul li a:hover {
-	background: #dbdbdb;
+nav ul li .menu-button:hover {
+	background: #6d6d6d;
 	color: #dddddd !important;
 }
 
-nav ul li.active a {
+nav ul li.active .menu-button {
 	background: #141414;
 	color: #dddddd !important;
 }
 
-nav ul li.active a:hover {
+nav ul li.active .menu-button:hover {
 	background: #141414;
 	color: #4b4b4b !important;
 }
@@ -476,35 +485,63 @@ nav ul li.active a:hover {
 .dropdown-container {
     display: none;
     background-color: #585858;
-    /* padding-left: 8px; */
+    padding-left: 8px;
 }
 
-nav ul li.active .dropdown-container a {
+nav ul li .dropdown-title a {
+    border-radius: 0 !important;
+    border-bottom: 0 !important;
+    border-top: 1px solid var(--menu-border-color);
 	background: #272727;
 	color: #dddddd !important;
 }
 
-nav ul li.active .dropdown-container a:hover {
+nav ul li .dropdown-title a:hover {
 	background: #383838;
 	color: #dddddd !important;
 }
 
-.dropdown-item {
+/* nav ul li .dropdown-container .add-widget a {
+    padding-top: 10px;
+	background: #e94b4b !important;
+	color: #dddddd !important;
+}
+
+nav ul li .dropdown-container .add-widget a:hover {
+	background: #4b4b4b !important;
+	color: #dddddd !important;
+} */
+
+nav ul li .dropdown-item {
     list-style: none;
 	margin: 0;
 	padding: 0;
 }
 
-.dropdown-item ion-icon {
+nav ul li .dropdown-icon  {
+    position: absolute !important;
+    top: -2px !important;
+    right: 0 !important;
+    display: inline-block !important;
     font-size: 18px;
-    margin-top: 5px;
-    padding-left: 5px;
+    padding-right: 5px;
 }
 
-.dropdown-item ion-icon > * {
-    padding-left: 5px;
-    
+nav ul li .dropdown-icon a:hover {
+    background-color: inherit;
+}
 
+nav ul li .dropdown-icon a {
+    display: inline-block !important;
+    position: relative;
+}
+
+nav ul li .dropdown-icon a ion-icon {
+    margin: 0 -10px 0 -10px;
+}
+
+nav ul li .dropdown-icon a:hover ion-icon {
+    color: var(--menu-icon-color-hover) !important;
 }
 
 .sub-menu-arrow {
