--- a/app/css/style.css
+++ b/app/css/style.css
@@ -173,7 +173,7 @@ input[type=number] {
 }
 
 #splash a {
-    color: lightgrey;
+    color: rgb(160, 160, 160);
 }
 
 .app-icon {
@@ -198,7 +198,6 @@ input[type=number] {
     height: 100%;
     overflow-y: auto;
     overflow-x: hidden;
-    display: table-row;
     opacity: 0;
     margin-top: var(--title-bar-height);
 }
