Add external script loading. Fix issues with pages not being padded properly.

--- a/app/css/style.css
+++ b/app/css/style.css
@@ -429,6 +429,10 @@ input[type=number] {
     overflow-x: hidden;
 }
 
+.widget-settings-page {
+    padding-top: 20px;
+}
+
 /* Overlays */
 
 #overlays button {
