--- a/app/css/style.css
+++ b/app/css/style.css
@@ -37,6 +37,21 @@ ion-icon {
     background-color: #181818;
 }
 
+.center-text {
+    text-align: center;
+}
+
+.welcome {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    z-index: 99;
+    width: 100vw;
+    background-color: #141414;
+    padding-top: var(--title-bar-height);
+}
+
 /* Scrollbar */
 
 ::-webkit-scrollbar {
@@ -231,6 +246,7 @@ input[type=number] {
     -webkit-app-region: drag;
     background-color: #272727;
     padding-top: 5px;
+    z-index: 100;
 }
 
 .title-bar ion-icon {
